Closed
Bug 916535
Opened 12 years ago
Closed 12 years ago
regression on linear-gradient
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla27
People
(Reporter: zer0, Assigned: jrmuizel)
References
Details
(Keywords: regression)
Attachments
(7 files)
|
114.36 KB,
image/png
|
Details | |
|
768 bytes,
text/html
|
Details | |
|
1.95 KB,
patch
|
Details | Diff | Splinter Review | |
|
2.52 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
2.49 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
5.12 KB,
patch
|
milan
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
5.12 KB,
patch
|
milan
:
review+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Since Firefox Aurora (25.0a2) it seems we have a regression on the linear-gradient behaviors; it's basically impossible have "pattern" in CSS using the gradient. See the attachments for more details.
This is doesn't affect Firefox Beta and Release; the issue is still present in Firefox Nightly.
Here also a link of gradient patterns that now doesn't work anymore:
http://css3pie.com/demos/gradient-patterns/
| Reporter | ||
Comment 1•12 years ago
|
||
Comment 2•12 years ago
|
||
I can reproduce the problem on windows7 if HWA off.
Regresson window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/2268ff80683a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20130721 Firefox/25.0 ID:20130721021348
Bad:
http://hg.mozilla.org/mozilla-central/rev/f80683d8c3e7
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20130722 Firefox/25.0 ID:20130722064651
Pushlog;
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2268ff80683a&tochange=f80683d8c3e7
Regresson window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/68bcfde4e82a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20130720 Firefox/25.0 ID:20130720034050
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/db5e3bb3205d
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20130720 Firefox/25.0 ID:20130720061649
Pushlog;
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=68bcfde4e82a&tochange=db5e3bb3205d
Regressed by:
9497f8c1a115 Jeff Muizelaar — Bug 895135. Avoid normalizing gradients to a smaller interval than 0..1. r=roc Previously if we had all the stops at the same location, we'd end up putting them all at 0. This makes things harder for backends that implement gradients with a lookup table because they don't have room for multiples entries at the zero location. If instead we leave the stops at the same location on the 0-1 line we'll have a better chance of drawing them correctly.
Blocks: 895135
status-firefox24:
--- → unaffected
tracking-firefox25:
--- → ?
tracking-firefox26:
--- → ?
Keywords: regression
OS: Mac OS X → All
Updated•12 years ago
|
Assignee: nobody → jmuizelaar
| Assignee | ||
Comment 3•12 years ago
|
||
This may fix it.
| Assignee | ||
Comment 4•12 years ago
|
||
Avoiding normalization caused gradientStart/Stop to not correspond to the firstStop and lastStop. This can cause us to incorrectly decide to use the repeat fast path. This patch switches takes us back to the same condition as we had before the regression.
| Assignee | ||
Comment 5•12 years ago
|
||
Attachment #806203 -
Flags: review?(roc)
| Assignee | ||
Comment 6•12 years ago
|
||
Attachment #806203 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 7•12 years ago
|
||
Comment on attachment 806197 [details] [diff] [review]
Fix it safer
Forgot to ask review for the real patch
Attachment #806197 -
Flags: review?(roc)
Attachment #806197 -
Flags: review?(roc) → review+
| Reporter | ||
Comment 9•12 years ago
|
||
Yes, as I said it affect FF25 (I just tried the latest Beta to be sure).
Flags: needinfo?(zer0)
Comment 10•12 years ago
|
||
Assuming this will be a prevalent issue, we'll uplift to Beta 25.
status-firefox25:
--- → affected
status-firefox26:
--- → affected
| Assignee | ||
Comment 11•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Comment 14•12 years ago
|
||
(In reply to Alex Keybl [:akeybl] from comment #10)
> Assuming this will be a prevalent issue, we'll uplift to Beta 25.
Do we have an answer to this question yet? Anyway, the patches won't uplift cleanly, so I'll see if I can make the aurora and beta versions, Jeff is on PTO for next few weeks.
Comment 15•12 years ago
|
||
(In reply to Milan Sreckovic [:milan] from comment #14)
> (In reply to Alex Keybl [:akeybl] from comment #10)
> > Assuming this will be a prevalent issue, we'll uplift to Beta 25.
>
> Do we have an answer to this question yet? Anyway, the patches won't uplift
> cleanly, so I'll see if I can make the aurora and beta versions, Jeff is on
> PTO for next few weeks.
I wouldn't be able to say. When it comes to a new visible regression like this though, it's better to be cautious and do our best to fix (or backout the regressing bug).
Would be great to get an uplift in for Thursday's beta.
Comment 16•12 years ago
|
||
This combines the "Fix it safer" and "A reftest" patches rebased for Aurora.
Attachment #814439 -
Flags: review+
Attachment #814439 -
Flags: approval-mozilla-aurora?
Comment 17•12 years ago
|
||
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 895135
User impact if declined: Wrong looking gradients.
Testing completed (on m-c, etc.): Yes. The trunk patch landed and stuck.
Risk to taking this patch (and alternatives if risky): Low
String or IDL/UUID changes made by this patch: None
This combines the "Fix it safer" and "A reftest" patches rebased for Beta.
Attachment #814441 -
Flags: review+
Attachment #814441 -
Flags: approval-mozilla-beta?
Updated•12 years ago
|
Attachment #814439 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•12 years ago
|
Attachment #814441 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 18•12 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/76d7bbf97925
https://hg.mozilla.org/releases/mozilla-beta/rev/13e137874d08
status-firefox27:
--- → fixed
Flags: in-testsuite+
Comment 19•12 years ago
|
||
Reproduced w/ d2d disabled on
- Aurora 26.0a2 buildid 20131007004003 and
- Nightly 27.0a1 buildid 20130923030204.
Verified on
- Aurora 26.0a2 buildid 20131010004002 and
- Nightly 27.0a1 buildid 20131010030202.
Comment 20•12 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; rv:25.0) Gecko/20100101 Firefox/25.0
Mozilla/5.0 (X11; Linux i686; rv:25.0) Gecko/20100101 Firefox/25.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20100101 Firefox/25.0
Verified as fixed on Firefox 25 beta 7 (Build ID: 20131010180222).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•