Bug 916535 - Avoid using repeating gradients for tiling when it won't work. r=roc, a=akeybl